sync translations from launchpad
New ja, sk, uk translations.
Also adjust for recent tweaks to the summary total messages.

Fixes issue #128

--- a/po/ja.po
+++ b/po/ja.po
@@ -1,17 +1,18 @@
-# Italian translation for fslint
-# Copyright (c) 2007 Rosetta Contributors and Canonical Ltd 2007
+# Japanese translation for fslint
+# Copyright (c) 2017 Rosetta Contributors and Canonical Ltd 2017
 # This file is distributed under the same license as the fslint package.
-# Marcello <mortaromarcello@gmail.com>, 2007.
+# FIRST AUTHOR <EMAIL@ADDRESS>, 2017.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 18:08-0800\n"
-"PO-Revision-Date: 2011-03-29 21:36+0000\n"
-"Last-Translator: Fabio Oleari <Unknown>\n"
-"Language-Team: Italian <it@li.org>\n"
-"Language: it\n"
+"PO-Revision-Date: 2017-02-15 05:43+0000\n"
+"Last-Translator: Shinichirou YAMADA <yamada_strong_yamada_nice_64bit@yahoo."
+"co.jp>\n"
+"Language-Team: Japanese <ja@li.org>\n"
+"Language: ja\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,11 +25,11 @@ msgstr "FSlint"
 
 #: ../fslint.glade:81
 msgid "Open _Folder"
-msgstr "Apri ca_rtella"
+msgstr "フォルダーを開く(_F)"
 
 #: ../fslint.glade:111
 msgid "_Rename..."
-msgstr "_Rinomina..."
+msgstr "名前を変更... (_R)"
 
 #: ../fslint.glade:121
 msgid "Select all in this directory"
@@ -36,71 +37,71 @@ msgstr ""
 
 #: ../fslint.glade:143
 msgid "Select using wildcard"
-msgstr "Seleziona usando wildcard"
+msgstr "ワイルドカードを使用して選択"
 
 #: ../fslint.glade:152
 msgid "Unselect using wildcard"
-msgstr "Deseleziona usando wildcard"
+msgstr "ワイルドカードを使用して選択解除"
 
 #: ../fslint.glade:161
 msgid "within groups"
-msgstr "con i gruppi"
+msgstr "グループ内"
 
 #: ../fslint.glade:170
 msgid "Select all but first"
-msgstr "Seleziona tutto tranne il primo"
+msgstr "先頭のアイテム以外をすべて選択"
 
 #: ../fslint.glade:179
 msgid "Select all but newest"
-msgstr "Seleziona tutto tranne il più nuovo"
+msgstr "最新のアイテム以外をすべて選択"
 
 #: ../fslint.glade:188
 msgid "Select all but oldest"
-msgstr "Seleziona tutto tranne il più vecchio"
+msgstr "最古のアイテム以外をすべて選択"
 
 #: ../fslint.glade:201
 msgid "Toggle selection"
-msgstr "Attiva/disattiva selezione"
+msgstr "選択を反転"
 
 #: ../fslint.glade:210
 msgid "Unselect all"
-msgstr "Deseleziona tutto"
+msgstr "すべて選択解除"
 
 #: ../fslint.glade:327 ../fslint.glade:580
 msgid "Add"
-msgstr "Aggiungi"
+msgstr "追加"
 
 #: ../fslint.glade:403 ../fslint.glade:656
 msgid "Remove"
-msgstr "Rimuovi"
+msgstr "削除"
 
 #: ../fslint.glade:450
 msgid "Directories to search"
-msgstr "Cartelle da cercare"
+msgstr "検索するフォルダー"
 
 #: ../fslint.glade:475
 msgid "recurse?"
-msgstr "ricorsivo?"
+msgstr "再帰的に検索"
 
 #: ../fslint.glade:499
 msgid "Search path"
-msgstr "Percorso di ricerca"
+msgstr "検索パス"
 
 #: ../fslint.glade:711
 msgid "Paths to exclude"
-msgstr "Percorsi da escludere"
+msgstr "除外するパス"
 
 #: ../fslint.glade:746
 msgid "Extra find parameters"
-msgstr "Parametri di ricerca aggiuntivi"
+msgstr "find コマンドの追加オプション"
 
 #: ../fslint.glade:771
 msgid "extra find filtering parameters"
-msgstr "Filtri di ricerca aggiuntivi"
+msgstr "find コマンドの追加フィルタリングパラメーター"
 
 #: ../fslint.glade:804
 msgid "Advanced search parameters"
-msgstr "Parametri di ricerca avanzati"
+msgstr "高度な検索パラメーター"
 
 #: ../fslint.glade:876
 msgid "Minimum file size:"
@@ -115,132 +116,132 @@ msgstr ""
 #: ../fslint.glade:2245 ../fslint.glade:2417 ../fslint.glade:2550
 #: ../fslint.glade:2899
 msgid "Name"
-msgstr "Nome"
+msgstr "名前"
 
 #: ../fslint.glade:966 ../fslint.glade:1368 ../fslint.glade:1677
 #: ../fslint.glade:1889 ../fslint.glade:2143 ../fslint.glade:2264
 #: ../fslint.glade:2436 ../fslint.glade:2569 ../fslint.glade:2918
 msgid "Directory"
-msgstr "Cartella"
+msgstr "フォルダー"
 
 #: ../fslint.glade:985 ../fslint.glade:1927 ../fslint.glade:2340
 #: ../fslint.glade:2455 ../fslint.glade:2607 ../fslint.glade:2956
 msgid "Date"
-msgstr "Data"
+msgstr "日時"
 
 #: ../fslint.glade:1020
 msgid "Duplicates"
-msgstr "Duplicati"
+msgstr "重複しているファイル"
 
 #: ../fslint.glade:1097 ../fslint.glade:1696 ../fslint.glade:1908
 #: ../fslint.glade:2321 ../fslint.glade:2588 ../fslint.glade:2937
 msgid "Size"
-msgstr "Dimensione"
+msgstr "サイズ"
 
 #: ../fslint.glade:1211
 msgid "Installed packages"
-msgstr "Pacchetti installati"
+msgstr "インストール済みのパッケージ"
 
 #: ../fslint.glade:1252
 msgid "Sensitivity="
-msgstr "Sensibilità"
+msgstr "感度="
 
 #: ../fslint.glade:1296
 msgid "invalid UTF8 mode?"
-msgstr "Modo UTF8 non valido?"
+msgstr "無効な UTF8 モード"
 
 #: ../fslint.glade:1403
 msgid "Bad names"
-msgstr "Nomi errati"
+msgstr "不正な名前"
 
 #: ../fslint.glade:1438
 msgid "Search ("
-msgstr "Cerca ("
+msgstr "検索対象 ("
 
 #: ../fslint.glade:1483
 msgid ") for"
-msgstr ") di"
+msgstr ")"
 
 #: ../fslint.glade:1530 ../fslint-gui:983
 msgid "Conflicting files"
-msgstr "Files in conflitto"
+msgstr "競合するファイル"
 
 #: ../fslint.glade:1538 ../fslint.glade:1601 ../fslint-gui:981
 #: ../fslint-gui:990
 msgid "Aliases"
-msgstr "Pseudonimi"
+msgstr "エイリアス"
 
 #: ../fslint.glade:1577 ../fslint-gui:996
 msgid "Case conflicts"
-msgstr "Conflitto maiuscolo/minuscolo"
+msgstr "同一フォルダー内で大文字小文字のみが異なる"
 
 #: ../fslint.glade:1585 ../fslint-gui:992
 msgid "Same names"
-msgstr "Stessi nomi"
+msgstr "同名"
 
 #: ../fslint.glade:1593 ../fslint-gui:994
 msgid "Same names(ignore case)"
-msgstr "Stessi nomi(ignoro le maiuscole)"
+msgstr "同名 (大文字小文字を区別しない)"
 
 #: ../fslint.glade:1731
 msgid "Name clashes"
-msgstr "Nomi coincidenti"
+msgstr "名前の衝突"
 
 #: ../fslint.glade:1766
 msgid "More restrictive search for core files"
-msgstr "Ricerca più restrittiva per i file core"
+msgstr "コアファイルの検索に限定する"
 
 #: ../fslint.glade:1768
 msgid "core file mode?"
-msgstr "Cerco file core?"
+msgstr "コアファイルモード"
 
 #: ../fslint.glade:1792
 msgid "days"
-msgstr "giorni"
+msgstr "日数"
 
 #: ../fslint.glade:1812
 msgid "minimum age"
-msgstr "età minima"
+msgstr "最短経過日数"
 
 #: ../fslint.glade:1962
 msgid "Temp files"
-msgstr "File temporanei"
+msgstr "一時ファイル"
 
 #: ../fslint.glade:1998
 msgid "Dangling"
-msgstr "Pendente"
+msgstr "破損"
 
 #: ../fslint.glade:2016
 msgid "Absolute links to paths within or below the link's directory"
-msgstr "Link assoluti a path dentro o al di sotto della directory link"
+msgstr "フォルダー内またはフォルダー下層への絶対リンク"
 
 #: ../fslint.glade:2018
 msgid "Suspect"
-msgstr "Sospetto"
+msgstr "疑惑"
 
 #: ../fslint.glade:2038
 msgid "Relative"
-msgstr "Relativo"
+msgstr "相対"
 
 #: ../fslint.glade:2058
 msgid "Absolute"
-msgstr "Assoluto"
+msgstr "絶対"
 
 #: ../fslint.glade:2077
 msgid "/././. ///// /../ etc."
-msgstr "/././. ///// /../ ecc."
+msgstr "/././. ///// /../ その他。"
 
 #: ../fslint.glade:2079
 msgid "Redundant naming"
-msgstr "Nome superfluo"
+msgstr "冗長なネーミング"
 
 #: ../fslint.glade:2162
 msgid "Target"
-msgstr "Target"
+msgstr "リンク先"
 
 #: ../fslint.glade:2197
 msgid "Bad symlinks"
-msgstr "Link simbolici sbagliati"
+msgstr "不正なシンボリックリンク"
 
 #: ../fslint.glade:2283
 msgid "UID"
@@ -252,83 +253,83 @@ msgstr "GID"
 
 #: ../fslint.glade:2375
 msgid "Bad IDs"
-msgstr "ID non corretti"
+msgstr "不正な ID"
 
 #: ../fslint.glade:2483
 msgid "Empty directories"
-msgstr "Directory vuote"
+msgstr "空のフォルダー"
 
 #: ../fslint.glade:2513
 msgid "Search $PATH"
-msgstr "Ricerca $PATH"
+msgstr "$PATH を検索"
 
 #: ../fslint.glade:2642
 msgid "Non stripped binaries"
-msgstr "Binari contenenti debug"
+msgstr "strip されていないバイナリーファイル"
 
 #: ../fslint.glade:2728
 msgid "bad indenting for indent width"
-msgstr "indentazione non corretta per larghezza"
+msgstr "インデント幅に問題があるインデント"
 
 #: ../fslint.glade:2836
 msgid "whitespace at end of line"
-msgstr "spazio alla fine della riga"
+msgstr "行末の空白"
 
 #: ../fslint.glade:2991
 msgid "Redundant whitespace"
-msgstr "Spazi superflui"
+msgstr "余分な空白"
 
 #: ../fslint.glade:3078
 msgid "Find"
-msgstr "Ricerca"
+msgstr "検索"
 
 #: ../fslint.glade:3157
 msgid "Stop"
-msgstr "Arresta"
+msgstr "中止"
 
 #: ../fslint.glade:3236
 msgid "Pause"
-msgstr "Pausa"
+msgstr "一時停止"
 
 #: ../fslint.glade:3315
 msgid "Resume"
-msgstr "Riprendi"
+msgstr "再開"
 
 #: ../fslint.glade:3408
 msgid "Select"
-msgstr "Seleziona"
+msgstr "選択"
 
 #: ../fslint.glade:3439
 msgid "Save (selected) list to file"
-msgstr "Salva la lista (selezione) su file"
+msgstr "選択されたファイルのリストを保存する"
 
 #: ../fslint.glade:3484
 msgid "Save"
-msgstr "Salva"
+msgstr "保存"
 
 #: ../fslint.glade:3515 ../fslint.glade:3667
 msgid "selected"
-msgstr "selezionato"
+msgstr "選択されたアイテムを"
 
 #: ../fslint.glade:3560
 msgid "Delete"
-msgstr "Elimina"
+msgstr "削除"
 
 #: ../fslint.glade:3591
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
 msgstr ""
-"Tutti (eccetto quelli selezionati) usando hardlink\n"
-"(o link simbolici se sono su filesystem diversi)"
+"選択されたファイルを除く全ての重複ファイルをハードリンクにする\n"
+"(異なるファイルシステム上にある場合はシンボリックリンクにする)"
 
 #: ../fslint.glade:3637
 msgid "Merge"
-msgstr "Unisci"
+msgstr "マージ"
 
 #: ../fslint.glade:3712
 msgid "Clean"
-msgstr "Pulisci"
+msgstr "クリーン"
 
 #: ../fslint.glade:3743
 msgid "All (except selected) using symbolic links"
@@ -340,223 +341,223 @@ msgstr ""
 
 #: ../fslint.glade:3925
 msgid "Select Path"
-msgstr "Seleziona percorso"
+msgstr "パスの選択"
 
 #: ../fslint.glade:4106
 msgid "ask me this in future?"
-msgstr "Visualizzare questo messaggio in futuro?"
+msgstr "今後もこのダイアログを表示する"
 
 #: ../fslint-gui:173
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr "Uso: %s [OPZIONI] [PERCORSI]"
+msgstr "使用方法: %s [OPTION] [PATHS]"
 
 #: ../fslint-gui:174
 msgid "display version"
-msgstr "mostra versione"
+msgstr "バージョンを表示する"
 
 #: ../fslint-gui:175
 msgid "display help"
-msgstr "mostra l'aiuto"
+msgstr "ヘルプを表示する"
 
 #: ../fslint-gui:424
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr "%(percent)s di %(disk)s in uso lasciando %(size)sB disponibili"
+msgstr "%(disk)s の %(percent)s が使用中 %(size)sB が利用可能"
 
 #: ../fslint-gui:560
 msgid "Do you want to overwrite?\n"
-msgstr "Vuoi sovrascrivere?\n"
+msgstr "上書きしますか？\n"
 
 #: ../fslint-gui:566
 msgid "You can't overwrite "
-msgstr "Non puoi sovrascrivere "
+msgstr "上書きできません "
 
 #: ../fslint-gui:602
 msgid "Files with the same content"
-msgstr "File con lo stesso contenuto"
+msgstr "同じ内容のファイル"
 
 #: ../fslint-gui:603
 msgid "Installed packages ordered by disk usage"
-msgstr "Pacchetti installati ordinati per dimensione"
+msgstr "インストールされたパッケージをディスク使用量順に表示"
 
 #: ../fslint-gui:604
 msgid "Problematic filenames"
-msgstr "Nomi di file problematici"
+msgstr "問題のあるファイル名"
 
 #: ../fslint-gui:605
 msgid "Possibly conflicting commands or filenames"
-msgstr "Possibili conflitti nei comandi o nei file"
+msgstr "競合するコマンドまたはファイル名"
 
 #: ../fslint-gui:606
 msgid "Possibly old temporary files"
-msgstr "Possibili vecchi file temporanei"
+msgstr "古い一時ファイル"
 
 #: ../fslint-gui:607
 msgid "Problematic symbolic links"
-msgstr "Link simbolici problematici"
+msgstr "問題のあるシンボリックリンク"
 
 #: ../fslint-gui:608
 msgid "Files with missing user IDs"
-msgstr "File con user ID mancante"
+msgstr "存在しないユーザー ID を持つファイル"
 
 #: ../fslint-gui:609
 msgid "Directory branches with no files"
-msgstr "Cartella e sottocartelle senza files"
+msgstr "ファイルが入っていないフォルダー"
 
 #: ../fslint-gui:610
 msgid "Executables still containing debugging info"
-msgstr "Eseguibili che contengono ancora informazioni di debug"
+msgstr "デバッグ情報を含む実行可能ファイル"
 
 #: ../fslint-gui:611
 msgid "Erroneous whitespace in a text file"
-msgstr "Spazi non necessari in un file di testo"
+msgstr "テキストファイル内の正しくない空白"
 
 #: ../fslint-gui:617
 msgid "Invalid path ["
-msgstr "Percorso invalido ["
+msgstr "無効なパス ["
 
 #: ../fslint-gui:658 ../fslint-gui:1359
 msgid "searching"
-msgstr "sto cercando"
+msgstr "検索中"
 
 #: ../fslint-gui:675
 msgid "processing..."
-msgstr "sto processando..."
+msgstr "処理中..."
 
 #: ../fslint-gui:703
 msgid "No search paths specified"
-msgstr "Nessun percorso di ricerca specificato"
+msgstr "検索パスが指定されていません"
 
 #: ../fslint-gui:860
 msgid ""
 "Sorry, FSlint does not support this functionality on your system at present."
 msgstr ""
-"Spiacente, al momento FSlint non supporta questa funzionalità sul tuo "
-"sistema."
+"申し訳ありませんが、FSlint は現在この機能をシステム上でサポートしていません。"
 
 #: ../fslint-gui:876
 msgid " packages, "
-msgstr " pacchetti, "
+msgstr " パッケージ、 "
 
 #: ../fslint-gui:877
 #, python-format
 msgid "consuming %sB. "
-msgstr "occupanti %sB. "
+msgstr "%sB 消費。 "
 
 #: ../fslint-gui:878
 #, python-format
 msgid "Note %s."
-msgstr "Nota %s."
+msgstr "備考: %s."
 
 #: ../fslint-gui:897 ../fslint-gui:937 ../fslint-gui:975 ../fslint-gui:1037
 msgid " files"
-msgstr " file"
+msgstr " 個のファイル"
 
 #: ../fslint-gui:917
 msgid " unstripped binaries"
-msgstr " binari contenenti debug"
+msgstr " 個の strip されていないバイナリーファイル"
 
 #: ../fslint-gui:926
 msgid " empty directories"
-msgstr " directory vuote"
+msgstr " 個の空フォルダー"
 
 #: ../fslint-gui:958
 msgid " links"
-msgstr " link"
+msgstr " 個のリンク"
 
 #: ../fslint-gui:974 ../fslint-gui:1090
 msgid " wasted in "
-msgstr " sprecati in "
+msgstr " の浪費 "
 
 #: ../fslint-gui:1020 ../fslint-gui:1091
 msgid " files (in "
-msgstr " file (in "
+msgstr " 個のファイル "
 
 #: ../fslint-gui:1021 ../fslint-gui:1092
 msgid " groups)"
-msgstr " gruppi)"
+msgstr " 個のグループ"
 
 #: ../fslint-gui:1082
 msgid "bytes wasted"
-msgstr "byte sprecati"
+msgstr "バイトの浪費"
 
 #: ../fslint-gui:1169
 msgid "None selected"
-msgstr "Nessuna selezione"
+msgstr "何も選択されていません"
 
 #: ../fslint-gui:1173
 msgid " this item?\n"
-msgstr " questo elemento?\n"
+msgstr " (1 個のアイテム)\n"
 
 #: ../fslint-gui:1175
 #, python-format
 msgid " these %d items?\n"
-msgstr " questi %d elementi?\n"
+msgstr " (%d 個のアイテム)\n"
 
 #: ../fslint-gui:1325
 msgid "User aborted"
-msgstr "Interruzione dell'utente"
+msgstr "中断されました"
 
 #: ../fslint-gui:1352
 msgid "paused"
-msgstr "in pausa"
+msgstr "一時停止中"
 
 #: ../fslint-gui:1499
 msgid "Error starting xdg-open"
-msgstr "Errore nell'esecuzione di xdg-open"
+msgstr "xdg-open を実行する際にエラーが発生しました"
 
 #: ../fslint-gui:1524
 msgid "Rename:"
-msgstr "Rinomina:"
+msgstr "名前を変更:"
 
 #: ../fslint-gui:1535 ../fslint-gui:1579
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Errore: [%s] non può essere rappresentato sul tuo filesystem"
+msgstr "エラー: 現在のファイルシステム上で [%s] を再現することは出来ません"
 
 #: ../fslint-gui:1545
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
-"Error: Non posso rinominare [%(old_path)s] perchè [%(new_path)s] esiste"
+"エラー: [%(new_path)s] が存在するため [%(old_path)s] の名前を変更できません"
 
 #: ../fslint-gui:1568
 msgid "wildcard:"
-msgstr "wildcard:"
+msgstr "ワイルドカード:"
 
 #: ../fslint-gui:1783
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Spiacente, devi essere root per eliminare pacchetti di sistema."
+msgstr ""
+"申し訳ありませんが、root でなければシステムパッケージを削除できません。"
 
 #: ../fslint-gui:1788
 msgid "Are you sure you want to delete"
-msgstr "Sei sicuro di voler cancellare"
+msgstr "削除してもよろしいですか？"
 
 #: ../fslint-gui:1795
 msgid "Are you sure you want to delete all items in this group?"
-msgstr "Si è sicuri di voler cancellare tutti gli elementi in questo gruppo?"
+msgstr "このグループのすべてのアイテムを削除してもよろしいですか？"
 
 #: ../fslint-gui:1815
 msgid "Calculating dependencies..."
-msgstr "Sto calcolando le dipendenze..."
+msgstr "依存関係を確認中..."
 
 #: ../fslint-gui:1833
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d pacchetti aggiuntivi necessitano di esser cancellati.\n"
+msgstr "%d 個の余分なパッケージを削除する必要があります。\n"
 
 #: ../fslint-gui:1834
 msgid "Please review the updated selection."
-msgstr "Per favore controlla la selezione aggiornata."
+msgstr ""
 
 #: ../fslint-gui:1842
 msgid "Removing packages..."
-msgstr "Sto rimuovendo i pacchetti..."
+msgstr "パッケージを削除中..."
 
 #: ../fslint-gui:1887
 msgid " items deleted"
-msgstr " elementi cancellati"
+msgstr " 個のアイテムを削除"
 
 #: ../fslint-gui:1907
 msgid "Are you sure you want to symlink ALL files?\n"
@@ -564,32 +565,32 @@ msgstr ""
 
 #: ../fslint-gui:1909
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Sei sicuro di voler unire TUTTI i file?\n"
+msgstr "すべてのファイルをマージしてもよろしいですか？\n"
 
 #: ../fslint-gui:1913
 msgid "(Ignoring those selected)\n"
-msgstr "(Tranne quelli selezionati)\n"
+msgstr "(選択されたファイルは無視します)\n"
 
 #: ../fslint-gui:1964
 msgid "Which indenting method do you want to convert to?"
-msgstr "Con quale metodo di indentazione vuoi convertire?"
+msgstr "どのインデント方法を変換しますか？"
 
 #: ../fslint-gui:1965
 msgid "Tabs"
-msgstr "Tab"
+msgstr "タブ"
 
 #: ../fslint-gui:1965
 msgid "Spaces"
-msgstr "Spazi"
+msgstr "スペース"
 
 #: ../fslint-gui:1976
 msgid "Are you sure you want to clean"
-msgstr "Sei sicuro di voler pulire"
+msgstr "クリーンしてもよろしいですか？"
 
 #: ../fslint-gui:2021
 msgid " items cleaned ("
-msgstr " elemento pulito ("
+msgstr " 個のアイテムをクリーンしました ("
 
 #: ../fslint-gui:2022
 msgid " saved)"
-msgstr " salvati)"
+msgstr " 削減)"
