--- a/po/sk.po
+++ b/po/sk.po
@@ -1,17 +1,17 @@
-# Italian translation for fslint
+# Slovak translation for fslint
 # Copyright (c) 2007 Rosetta Contributors and Canonical Ltd 2007
 # This file is distributed under the same license as the fslint package.
-# Marcello <mortaromarcello@gmail.com>, 2007.
+# Martin Harvan <martinhrvn@gmail.com>, 2007.
 #
 msgid ""
 msgstr ""
 "Project-Id-Version: fslint\n"
 "Report-Msgid-Bugs-To: \n"
 "POT-Creation-Date: 2017-02-15 18:08-0800\n"
-"PO-Revision-Date: 2011-03-29 21:36+0000\n"
-"Last-Translator: Fabio Oleari <Unknown>\n"
-"Language-Team: Italian <it@li.org>\n"
-"Language: it\n"
+"PO-Revision-Date: 2016-04-12 23:02+0000\n"
+"Last-Translator: Maor <Unknown>\n"
+"Language-Team: Slovak <sk@li.org>\n"
+"Language: sk\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -24,11 +24,11 @@ msgstr "FSlint"
 
 #: ../fslint.glade:81
 msgid "Open _Folder"
-msgstr "Apri ca_rtella"
+msgstr "Otvoriť _priečinok"
 
 #: ../fslint.glade:111
 msgid "_Rename..."
-msgstr "_Rinomina..."
+msgstr "_Premenovať..."
 
 #: ../fslint.glade:121
 msgid "Select all in this directory"
@@ -36,71 +36,71 @@ msgstr ""
 
 #: ../fslint.glade:143
 msgid "Select using wildcard"
-msgstr "Seleziona usando wildcard"
+msgstr "Výber náhradných znakov *.*"
 
 #: ../fslint.glade:152
 msgid "Unselect using wildcard"
-msgstr "Deseleziona usando wildcard"
+msgstr "Zrušiť výber náhradných znakov *.*"
 
 #: ../fslint.glade:161
 msgid "within groups"
-msgstr "con i gruppi"
+msgstr "V skupinách"
 
 #: ../fslint.glade:170
 msgid "Select all but first"
-msgstr "Seleziona tutto tranne il primo"
+msgstr "Vybrať všetko okrem prvej"
 
 #: ../fslint.glade:179
 msgid "Select all but newest"
-msgstr "Seleziona tutto tranne il più nuovo"
+msgstr "Vybrať všetko okrem najnovšej"
 
 #: ../fslint.glade:188
 msgid "Select all but oldest"
-msgstr "Seleziona tutto tranne il più vecchio"
+msgstr "Vybrať všetko okrem najstaršej"
 
 #: ../fslint.glade:201
 msgid "Toggle selection"
-msgstr "Attiva/disattiva selezione"
+msgstr "Otočiť výber"
 
 #: ../fslint.glade:210
 msgid "Unselect all"
-msgstr "Deseleziona tutto"
+msgstr "Odznačit všetko"
 
 #: ../fslint.glade:327 ../fslint.glade:580
 msgid "Add"
-msgstr "Aggiungi"
+msgstr "Pridať"
 
 #: ../fslint.glade:403 ../fslint.glade:656
 msgid "Remove"
-msgstr "Rimuovi"
+msgstr "Odstrániť"
 
 #: ../fslint.glade:450
 msgid "Directories to search"
-msgstr "Cartelle da cercare"
+msgstr "Adresáre na vyhľadávanie"
 
 #: ../fslint.glade:475
 msgid "recurse?"
-msgstr "ricorsivo?"
+msgstr "rekurzívne?"
 
 #: ../fslint.glade:499
 msgid "Search path"
-msgstr "Percorso di ricerca"
+msgstr "Cesty na hľadanie"
 
 #: ../fslint.glade:711
 msgid "Paths to exclude"
-msgstr "Percorsi da escludere"
+msgstr "Cesty na vynechanie"
 
 #: ../fslint.glade:746
 msgid "Extra find parameters"
-msgstr "Parametri di ricerca aggiuntivi"
+msgstr "Zvláštne parametre hľadania"
 
 #: ../fslint.glade:771
 msgid "extra find filtering parameters"
-msgstr "Filtri di ricerca aggiuntivi"
+msgstr "Zvláštne parametre filtrovania"
 
 #: ../fslint.glade:804
 msgid "Advanced search parameters"
-msgstr "Parametri di ricerca avanzati"
+msgstr "Rozšírené možnosti hľadania"
 
 #: ../fslint.glade:876
 msgid "Minimum file size:"
@@ -115,132 +115,132 @@ msgstr ""
 #: ../fslint.glade:2245 ../fslint.glade:2417 ../fslint.glade:2550
 #: ../fslint.glade:2899
 msgid "Name"
-msgstr "Nome"
+msgstr "Názov"
 
 #: ../fslint.glade:966 ../fslint.glade:1368 ../fslint.glade:1677
 #: ../fslint.glade:1889 ../fslint.glade:2143 ../fslint.glade:2264
 #: ../fslint.glade:2436 ../fslint.glade:2569 ../fslint.glade:2918
 msgid "Directory"
-msgstr "Cartella"
+msgstr "Priečinok"
 
 #: ../fslint.glade:985 ../fslint.glade:1927 ../fslint.glade:2340
 #: ../fslint.glade:2455 ../fslint.glade:2607 ../fslint.glade:2956
 msgid "Date"
-msgstr "Data"
+msgstr "Dátum"
 
 #: ../fslint.glade:1020
 msgid "Duplicates"
-msgstr "Duplicati"
+msgstr "Duplikáty"
 
 #: ../fslint.glade:1097 ../fslint.glade:1696 ../fslint.glade:1908
 #: ../fslint.glade:2321 ../fslint.glade:2588 ../fslint.glade:2937
 msgid "Size"
-msgstr "Dimensione"
+msgstr "Veľkosť"
 
 #: ../fslint.glade:1211
 msgid "Installed packages"
-msgstr "Pacchetti installati"
+msgstr "Nainštalované balíky"
 
 #: ../fslint.glade:1252
 msgid "Sensitivity="
-msgstr "Sensibilità"
+msgstr "Citlivosť="
 
 #: ../fslint.glade:1296
 msgid "invalid UTF8 mode?"
-msgstr "Modo UTF8 non valido?"
+msgstr "chybný mód UTF8?"
 
 #: ../fslint.glade:1403
 msgid "Bad names"
-msgstr "Nomi errati"
+msgstr "Chybné názvy"
 
 #: ../fslint.glade:1438
 msgid "Search ("
-msgstr "Cerca ("
+msgstr "Prohľadávať v ("
 
 #: ../fslint.glade:1483
 msgid ") for"
-msgstr ") di"
+msgstr ") pre"
 
 #: ../fslint.glade:1530 ../fslint-gui:983
 msgid "Conflicting files"
-msgstr "Files in conflitto"
+msgstr "Konfliktné súbory"
 
 #: ../fslint.glade:1538 ../fslint.glade:1601 ../fslint-gui:981
 #: ../fslint-gui:990
 msgid "Aliases"
-msgstr "Pseudonimi"
+msgstr "Aliasy"
 
 #: ../fslint.glade:1577 ../fslint-gui:996
 msgid "Case conflicts"
-msgstr "Conflitto maiuscolo/minuscolo"
+msgstr "Konflikty veľkosti písmen"
 
 #: ../fslint.glade:1585 ../fslint-gui:992
 msgid "Same names"
-msgstr "Stessi nomi"
+msgstr "Rovnaké názvy"
 
 #: ../fslint.glade:1593 ../fslint-gui:994
 msgid "Same names(ignore case)"
-msgstr "Stessi nomi(ignoro le maiuscole)"
+msgstr "Rovnaké názvy (ignorovať malé a veľké písmená)"
 
 #: ../fslint.glade:1731
 msgid "Name clashes"
-msgstr "Nomi coincidenti"
+msgstr "Kolízia názvov"
 
 #: ../fslint.glade:1766
 msgid "More restrictive search for core files"
-msgstr "Ricerca più restrittiva per i file core"
+msgstr "Reštriktívnejšie vyhľadávanie súborov jadra"
 
 #: ../fslint.glade:1768
 msgid "core file mode?"
-msgstr "Cerco file core?"
+msgstr "režim súboru jadra?"
 
 #: ../fslint.glade:1792
 msgid "days"
-msgstr "giorni"
+msgstr "dní"
 
 #: ../fslint.glade:1812
 msgid "minimum age"
-msgstr "età minima"
+msgstr "minimálny vek"
 
 #: ../fslint.glade:1962
 msgid "Temp files"
-msgstr "File temporanei"
+msgstr "Dočasné súbory"
 
 #: ../fslint.glade:1998
 msgid "Dangling"
-msgstr "Pendente"
+msgstr "Kolísanie"
 
 #: ../fslint.glade:2016
 msgid "Absolute links to paths within or below the link's directory"
-msgstr "Link assoluti a path dentro o al di sotto della directory link"
+msgstr "Absolútne odkazy na cesty vnútri alebo pod adresárom odkazu"
 
 #: ../fslint.glade:2018
 msgid "Suspect"
-msgstr "Sospetto"
+msgstr "Podozrivý"
 
 #: ../fslint.glade:2038
 msgid "Relative"
-msgstr "Relativo"
+msgstr "Relatívne"
 
 #: ../fslint.glade:2058
 msgid "Absolute"
-msgstr "Assoluto"
+msgstr "Absolútne"
 
 #: ../fslint.glade:2077
 msgid "/././. ///// /../ etc."
-msgstr "/././. ///// /../ ecc."
+msgstr "/././. ///// /../ etc."
 
 #: ../fslint.glade:2079
 msgid "Redundant naming"
-msgstr "Nome superfluo"
+msgstr "Redundantné pomenovanie"
 
 #: ../fslint.glade:2162
 msgid "Target"
-msgstr "Target"
+msgstr "Cieľ"
 
 #: ../fslint.glade:2197
 msgid "Bad symlinks"
-msgstr "Link simbolici sbagliati"
+msgstr "Chybné symlinky"
 
 #: ../fslint.glade:2283
 msgid "UID"
@@ -252,83 +252,83 @@ msgstr "GID"
 
 #: ../fslint.glade:2375
 msgid "Bad IDs"
-msgstr "ID non corretti"
+msgstr "Chybné IDs"
 
 #: ../fslint.glade:2483
 msgid "Empty directories"
-msgstr "Directory vuote"
+msgstr "Prázdne adresáre"
 
 #: ../fslint.glade:2513
 msgid "Search $PATH"
-msgstr "Ricerca $PATH"
+msgstr "Vyhľadať $PATH"
 
 #: ../fslint.glade:2642
 msgid "Non stripped binaries"
-msgstr "Binari contenenti debug"
+msgstr "Neodhalené binárky"
 
 #: ../fslint.glade:2728
 msgid "bad indenting for indent width"
-msgstr "indentazione non corretta per larghezza"
+msgstr "zlé odsadenie pre šírku odsadenia"
 
 #: ../fslint.glade:2836
 msgid "whitespace at end of line"
-msgstr "spazio alla fine della riga"
+msgstr "biele miesto na konci riadku"
 
 #: ../fslint.glade:2991
 msgid "Redundant whitespace"
-msgstr "Spazi superflui"
+msgstr "nadbytočné miesto"
 
 #: ../fslint.glade:3078
 msgid "Find"
-msgstr "Ricerca"
+msgstr "Hľadať"
 
 #: ../fslint.glade:3157
 msgid "Stop"
-msgstr "Arresta"
+msgstr "Zastaviť"
 
 #: ../fslint.glade:3236
 msgid "Pause"
-msgstr "Pausa"
+msgstr "Pozastavené"
 
 #: ../fslint.glade:3315
 msgid "Resume"
-msgstr "Riprendi"
+msgstr "Súhrn"
 
 #: ../fslint.glade:3408
 msgid "Select"
-msgstr "Seleziona"
+msgstr "Vybrať"
 
 #: ../fslint.glade:3439
 msgid "Save (selected) list to file"
-msgstr "Salva la lista (selezione) su file"
+msgstr "Uložiť (vybraný) zoznam do súboru"
 
 #: ../fslint.glade:3484
 msgid "Save"
-msgstr "Salva"
+msgstr "Uložiť"
 
 #: ../fslint.glade:3515 ../fslint.glade:3667
 msgid "selected"
-msgstr "selezionato"
+msgstr "zvolené"
 
 #: ../fslint.glade:3560
 msgid "Delete"
-msgstr "Elimina"
+msgstr "Zmazať"
 
 #: ../fslint.glade:3591
 msgid ""
 "All (except selected) using hardlinks\n"
 "(or symlinks if on a different filesystem)"
 msgstr ""
-"Tutti (eccetto quelli selezionati) usando hardlink\n"
-"(o link simbolici se sono su filesystem diversi)"
+"Všetky (okrem vybraných) pomocou hardlinks\n"
+"(Alebo symbolické odkazy na inom súborovom systéme)"
 
 #: ../fslint.glade:3637
 msgid "Merge"
-msgstr "Unisci"
+msgstr "Zlúčiť"
 
 #: ../fslint.glade:3712
 msgid "Clean"
-msgstr "Pulisci"
+msgstr "Vyčistiť"
 
 #: ../fslint.glade:3743
 msgid "All (except selected) using symbolic links"
@@ -340,223 +340,223 @@ msgstr ""
 
 #: ../fslint.glade:3925
 msgid "Select Path"
-msgstr "Seleziona percorso"
+msgstr "Vybrať cestu"
 
 #: ../fslint.glade:4106
 msgid "ask me this in future?"
-msgstr "Visualizzare questo messaggio in futuro?"
+msgstr "opýtať sa na to v budúcnosti?"
 
 #: ../fslint-gui:173
 #, python-format
 msgid "Usage: %s [OPTION] [PATHS]"
-msgstr "Uso: %s [OPZIONI] [PERCORSI]"
+msgstr "Využitie: %s [OPTION] [PATHS]"
 
 #: ../fslint-gui:174
 msgid "display version"
-msgstr "mostra versione"
+msgstr "zobraziť verziu"
 
 #: ../fslint-gui:175
 msgid "display help"
-msgstr "mostra l'aiuto"
+msgstr "zobraziť pomocníka"
 
 #: ../fslint-gui:424
 #, python-format
 msgid "%(percent)s of %(disk)s is used leaving %(size)sB available"
-msgstr "%(percent)s di %(disk)s in uso lasciando %(size)sB disponibili"
+msgstr "%(percent)s na %(disk)s je použitých, ostáva voľných %(size)sB"
 
 #: ../fslint-gui:560
 msgid "Do you want to overwrite?\n"
-msgstr "Vuoi sovrascrivere?\n"
+msgstr "Prajete si ho prepísať?\n"
 
 #: ../fslint-gui:566
 msgid "You can't overwrite "
-msgstr "Non puoi sovrascrivere "
+msgstr "Nedá sa prepísať "
 
 #: ../fslint-gui:602
 msgid "Files with the same content"
-msgstr "File con lo stesso contenuto"
+msgstr "Súbory s rovnakým obsahom"
 
 #: ../fslint-gui:603
 msgid "Installed packages ordered by disk usage"
-msgstr "Pacchetti installati ordinati per dimensione"
+msgstr "Zoradiť nainštalované balíky podľa využitia disku"
 
 #: ../fslint-gui:604
 msgid "Problematic filenames"
-msgstr "Nomi di file problematici"
+msgstr "Problematické názvy súborov"
 
 #: ../fslint-gui:605
 msgid "Possibly conflicting commands or filenames"
-msgstr "Possibili conflitti nei comandi o nei file"
+msgstr "Možnosť problematických príkazov alebo názvov súborov"
 
 #: ../fslint-gui:606
 msgid "Possibly old temporary files"
-msgstr "Possibili vecchi file temporanei"
+msgstr "Možno staré dočasné súbory"
 
 #: ../fslint-gui:607
 msgid "Problematic symbolic links"
-msgstr "Link simbolici problematici"
+msgstr "Problematické symbolické linky"
 
 #: ../fslint-gui:608
 msgid "Files with missing user IDs"
-msgstr "File con user ID mancante"
+msgstr "Súbory s chýbajúcimi ID používateľov"
 
 #: ../fslint-gui:609
 msgid "Directory branches with no files"
-msgstr "Cartella e sottocartelle senza files"
+msgstr "Adresárové vetvy bez souborov"
 
 #: ../fslint-gui:610
 msgid "Executables still containing debugging info"
-msgstr "Eseguibili che contengono ancora informazioni di debug"
+msgstr "Spustiteľné súbory stále obsahujú ladiace informácie"
 
 #: ../fslint-gui:611
 msgid "Erroneous whitespace in a text file"
-msgstr "Spazi non necessari in un file di testo"
+msgstr "Chybné biele znaky v textovom súbore"
 
 #: ../fslint-gui:617
 msgid "Invalid path ["
-msgstr "Percorso invalido ["
+msgstr "Neplatná cesta ["
 
 #: ../fslint-gui:658 ../fslint-gui:1359
 msgid "searching"
-msgstr "sto cercando"
+msgstr "vyhľadávanie"
 
 #: ../fslint-gui:675
 msgid "processing..."
-msgstr "sto processando..."
+msgstr "spracovávanie ..."
 
 #: ../fslint-gui:703
 msgid "No search paths specified"
-msgstr "Nessun percorso di ricerca specificato"
+msgstr "Nešpecifikované cesty na hľadanie"
 
 #: ../fslint-gui:860
 msgid ""
 "Sorry, FSlint does not support this functionality on your system at present."
 msgstr ""
-"Spiacente, al momento FSlint non supporta questa funzionalità sul tuo "
-"sistema."
+"Prepáčte, FSlint v súčasnosti nepodporuje túto funkcionalitu na vašom "
+"systéme."
 
 #: ../fslint-gui:876
 msgid " packages, "
-msgstr " pacchetti, "
+msgstr " balíčky, "
 
 #: ../fslint-gui:877
 #, python-format
 msgid "consuming %sB. "
-msgstr "occupanti %sB. "
+msgstr "spotrebované %sB. "
 
 #: ../fslint-gui:878
 #, python-format
 msgid "Note %s."
-msgstr "Nota %s."
+msgstr "Poznámka %s."
 
 #: ../fslint-gui:897 ../fslint-gui:937 ../fslint-gui:975 ../fslint-gui:1037
 msgid " files"
-msgstr " file"
+msgstr " súbory"
 
 #: ../fslint-gui:917
 msgid " unstripped binaries"
-msgstr " binari contenenti debug"
+msgstr " neodhalené binárky"
 
 #: ../fslint-gui:926
 msgid " empty directories"
-msgstr " directory vuote"
+msgstr " prázdne adresáre"
 
 #: ../fslint-gui:958
 msgid " links"
-msgstr " link"
+msgstr " odkazy"
 
 #: ../fslint-gui:974 ../fslint-gui:1090
 msgid " wasted in "
-msgstr " sprecati in "
+msgstr " minutých v "
 
 #: ../fslint-gui:1020 ../fslint-gui:1091
 msgid " files (in "
-msgstr " file (in "
+msgstr " súbory (v "
 
 #: ../fslint-gui:1021 ../fslint-gui:1092
 msgid " groups)"
-msgstr " gruppi)"
+msgstr " skupiny)"
 
 #: ../fslint-gui:1082
 msgid "bytes wasted"
-msgstr "byte sprecati"
+msgstr "bajtov minutých"
 
 #: ../fslint-gui:1169
 msgid "None selected"
-msgstr "Nessuna selezione"
+msgstr "Nič nie je zvolené"
 
 #: ../fslint-gui:1173
 msgid " this item?\n"
-msgstr " questo elemento?\n"
+msgstr " táto položka?\n"
 
 #: ../fslint-gui:1175
 #, python-format
 msgid " these %d items?\n"
-msgstr " questi %d elementi?\n"
+msgstr " tieto %d položky?\n"
 
 #: ../fslint-gui:1325
 msgid "User aborted"
-msgstr "Interruzione dell'utente"
+msgstr "zrušené používateľom"
 
 #: ../fslint-gui:1352
 msgid "paused"
-msgstr "in pausa"
+msgstr "pozastavené"
 
 #: ../fslint-gui:1499
 msgid "Error starting xdg-open"
-msgstr "Errore nell'esecuzione di xdg-open"
+msgstr "chyba pri spustení xdg-open"
 
 #: ../fslint-gui:1524
 msgid "Rename:"
-msgstr "Rinomina:"
+msgstr "Premenovať:"
 
 #: ../fslint-gui:1535 ../fslint-gui:1579
 #, python-format
 msgid "Error: [%s] can not be represented on your file system"
-msgstr "Errore: [%s] non può essere rappresentato sul tuo filesystem"
+msgstr "Chyba: [%s] nemôže byť reprezentovaný na vašom súborovom systéme"
 
 #: ../fslint-gui:1545
 #, python-format
 msgid "Error: Can't rename [%(old_path)s] as [%(new_path)s] exists"
 msgstr ""
-"Error: Non posso rinominare [%(old_path)s] perchè [%(new_path)s] esiste"
+"Chyba: [%(old_path)s] sa nedá premenovať, pretože [%(new_path)s] existuje"
 
 #: ../fslint-gui:1568
 msgid "wildcard:"
-msgstr "wildcard:"
+msgstr "divoká karta:"
 
 #: ../fslint-gui:1783
 msgid "Sorry, you must be root to delete system packages."
-msgstr "Spiacente, devi essere root per eliminare pacchetti di sistema."
+msgstr "Pre odstránie systémových balíčkov musíte mať práva root-a"
 
 #: ../fslint-gui:1788
 msgid "Are you sure you want to delete"
-msgstr "Sei sicuro di voler cancellare"
+msgstr "Ste si istý že chcete odstrániť"
 
 #: ../fslint-gui:1795
 msgid "Are you sure you want to delete all items in this group?"
-msgstr "Si è sicuri di voler cancellare tutti gli elementi in questo gruppo?"
+msgstr "Ste si istí, že chcete vymazať všetky položky v tejto skupine?"
 
 #: ../fslint-gui:1815
 msgid "Calculating dependencies..."
-msgstr "Sto calcolando le dipendenze..."
+msgstr "Spočítanie závislostí.."
 
 #: ../fslint-gui:1833
 #, python-format
 msgid "%d extra packages need to be deleted.\n"
-msgstr "%d pacchetti aggiuntivi necessitano di esser cancellati.\n"
+msgstr "%d ďalších balíčkov musí byť odstránených.\n"
 
 #: ../fslint-gui:1834
 msgid "Please review the updated selection."
-msgstr "Per favore controlla la selezione aggiornata."
+msgstr "Prezrite si prosím aktualizovany výber."
 
 #: ../fslint-gui:1842
 msgid "Removing packages..."
-msgstr "Sto rimuovendo i pacchetti..."
+msgstr "Odstránenie balíčkov..."
 
 #: ../fslint-gui:1887
 msgid " items deleted"
-msgstr " elementi cancellati"
+msgstr " položiek odstránených"
 
 #: ../fslint-gui:1907
 msgid "Are you sure you want to symlink ALL files?\n"
@@ -564,32 +564,32 @@ msgstr ""
 
 #: ../fslint-gui:1909
 msgid "Are you sure you want to merge ALL files?\n"
-msgstr "Sei sicuro di voler unire TUTTI i file?\n"
+msgstr "Chcete naozaj spojiť VŠETKY súbory?\n"
 
 #: ../fslint-gui:1913
 msgid "(Ignoring those selected)\n"
-msgstr "(Tranne quelli selezionati)\n"
+msgstr "(Ignorujem vybrané)\n"
 
 #: ../fslint-gui:1964
 msgid "Which indenting method do you want to convert to?"
-msgstr "Con quale metodo di indentazione vuoi convertire?"
+msgstr "Na ktorý spôsob odsadenie chcete previesť?"
 
 #: ../fslint-gui:1965
 msgid "Tabs"
-msgstr "Tab"
+msgstr "Karty"
 
 #: ../fslint-gui:1965
 msgid "Spaces"
-msgstr "Spazi"
+msgstr "Medzery"
 
 #: ../fslint-gui:1976
 msgid "Are you sure you want to clean"
-msgstr "Sei sicuro di voler pulire"
+msgstr "Naozaj chcete vymazat"
 
 #: ../fslint-gui:2021
 msgid " items cleaned ("
-msgstr " elemento pulito ("
+msgstr " položiek vyčistených ("
 
 #: ../fslint-gui:2022
 msgid " saved)"
-msgstr " salvati)"
+msgstr " bolo uvolnených)"
