follow command line symlinks by default
For example if /bin is specified in the GUI on modern distros
which symlink to /usr/bin, then it's searched as expected.

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,6 +1,7 @@
 2.47 dd/mm/yy
 	* Improvements:
 		* Size totals in the GUI are now displayed in KB, MB, GB units.
+		* Specified symlinks to dirs (like /bin) are processed as dirs.
 
 2.46 01/02/17
 	* Fixes:
