fix processing of specified dirs containing single quotes
This regressed in commit 2.44-13-gac315bd
* fslint/supprt/fslver: Undo the regression.
* fslint/supprt/getfpf: The correct fix for the previous issue.
Fixes issue #150

--- a/doc/NEWS
+++ b/doc/NEWS
@@ -1,4 +1,7 @@
 2.47 dd/mm/yy
+	* Fixes:
+		* Specified directories containing single quotes are again
+		  supported. This regression was introduced in 2.46.
 	* Improvements:
 		* Size totals in the GUI are now displayed in KB, MB, GB units.
 		* Specified symlinks to dirs (like /bin) are processed as dirs.
